# abap-tokenizer

./: Cargo.toml  README.md  makefilesthree.sh  makefilestrhee.ps1
config/: default_config.toml
examples/: simple_tokenization.rs
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs  tokenizer_config.rs  toml_loader.rs
src/tokenizer/: flexible_tokenizer.rs  mod.rs  token.rs  token_type.rs
